--- a/static/scss/_style.scss
+++ b/static/scss/_style.scss
@@ -707,14 +707,13 @@ hr {
 }
 
 
+#nav {
+    padding-top: 2px;
+}
+
+
 
 /********** @RESPONSIVE *********/
-
-@media (min-width: 768px) {
-
-
-
-}
 
 //lg
 @media ($lg-query) {
@@ -754,7 +753,7 @@ hr {
 	 }
 
      #nav {
-         //margin-top:-0.4em;
+         padding-top: 10px;
      }
 
 	 #header-shadow{
